remove web3 used from response
